# gitcpp

./: CMakeLists.txt  LICENSE  README.md
src/gitcpp/: GitObject.cpp  GitObject.h  GitObjectId.cpp  GitObjectId.h  GitObjectIdPrefix.cpp  GitObjectIdPrefix.h  GitObjectType.cpp  GitObjectType.h  Reference.cpp  Reference.h  Repository.cpp  Repository.h  RepositoryReferenceManager.cpp  RepositoryReferenceManager.h
src/gitcpp/implementation/: ErrorUtil.cpp  ErrorUtil.h  GitBuf.cpp  GitBuf.h  HandleUtil.cpp  HandleUtil.h
src/gitcpp/implementation/_base/: RepositoryBase.cpp  RepositoryBase.h
src/gitcpp/implementation/annotated_commit/: AnnotatedCommit.cpp  AnnotatedCommit.h  AnnotatedCommitRepositoryExt.cpp  AnnotatedCommitRepositoryExt.h
src/gitcpp/implementation/config/: Config.cpp  Config.h  ConfigEntry.cpp  ConfigEntry.h  ConfigEntryIterator.cpp  ConfigEntryIterator.h  ConfigLevel.cpp  ConfigLevel.h  ConfigUtil.cpp  ConfigUtil.h
src/gitcpp/interface/: FwdDecl.h  ICommit.h  IIterator.h  IObject.h  IObjectId.h  IObjectType.h  IReference.h  IRepository.h
src/gitcpp/interface/annotated_commit/: IAnnotatedCommit.h  IAnnotatedCommitRepositoryExt.h
src/gitcpp/interface/config/: IConfig.h  IConfigEntry.h  IConfigLevel.h  IConfigUtil.h
src/gitcpp/interface/index/: IIndex.h  IIndexEntry.h  IIndexRepositoryExt.h  IIndexTime.h
src/gitcpp/util/: ErrorUtility.cpp  ErrorUtility.h  HandleUtility.cpp  HandleUtility.h
